
2009-01-18
- update documentation for new config format
- fixed memory corruption
- fixed bug with "task on all desktop" (issue 39)

2009-01-17
- fixed drawing of active task (with new layout)

2009-01-05
- fixed decorated window with compiz

2008-12-30
- fixed bug : segfault on ConfigureNotify event

2008-11-12
- fixed bug : segfault with icon
- panel's left and right padding feel like WM background
  (right click open window managers's menu, ...)

2008-11-02
- fixed bugs with new design
- panel.area manage the tree of visible objects

2008-10-28
- fixed issue : "untitled task", "task button did not update", "window don't shade",
  "error if I don't do 'make install'", "Makefile error"

2008-09-24
- change tintrc format
  user can define a list of background and border at the beginning of tintrc
  and each object (panel, taskbar, task, clock, systray) get a background number.
  the background number 0 is reserved by tint2 for full transparency.
  user's background start with number 1, 2, ...

2008-09-22
- better control on icon opacity 
  icon opacity use the same value as text opacity

2008-09-21
- new parameter task_text = 0 or 1
  so you can show task's icon without text
- remove task_icon_size parameter because icon_size is calculate with task->padding_y

2008-09-19
- improve clock drawing on 2 lines
- new design : object oriented 
    clock inherit Area (with draw_background)
- rename parameter 'panel_mode' in 'taskbar_mode'

2008-09-17
- change name from tint to tint2 because debian has already a package named tint
- new design : object oriented 
    tasks inherit Area
    taskbars inherit Area

2008-09-16
- new design : object oriented 
    remove task_margin parameter, replaced by taskbar_padding
    fixed segfault with new layout

2008-09-04
- new design : object oriented 
  all objects inherit from Area : panel, taskbar, task, clock

2008-09-02 licence changed to GPL V2
>     Hi Pål,