@@ -19,8 +19,8 @@ border_color = #cccccc 40
 # PANEL
 #---------------------------------------------
 panel_monitor = 1
-panel_position = top right
-panel_size = 600 27
+panel_position = bottom left
+panel_size = 0 27
 panel_margin = 0 0
 panel_padding = 4 0
 font_shadow = 0
@@ -29,7 +29,7 @@ panel_background_id = 1
 #---------------------------------------------
 # TASKBAR
 #---------------------------------------------
-taskbar_mode = multi_desktop
+taskbar_mode = multi_monitor
 taskbar_padding = 4 0
 taskbar_background_id = 0
 
